# ChangeLog for app-misc/workrave
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/workrave/ChangeLog,v 1.48 2008/06/14 09:06:42 nixnut Exp $

  14 Jun 2008; nixnut <nixnut@gentoo.org> workrave-1.8.5.ebuild:
  Stable on ppc wrt bug 225391

*workrave-1.8.5 (08 May 2008)

  08 May 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +files/workrave-1.8.5-gcc43.patch,
  +files/workrave-1.8.5-libsigc++-2.2.2.patch, +workrave-1.8.5.ebuild:
  bump to 1.8.5. Close bug #220657, #215435 and #213430.

  22 Jul 2007; David Shakaryan <omp@gentoo.org> workrave-1.8.3.ebuild:
  Remove virtual/x11 from dependencies.

*workrave-1.8.4 (16 Mar 2007)

  16 Mar 2007; Leonardo Boshell <leonardop@gentoo.org>
  +files/workrave-1.8.4-nls_macros.patch,
  +files/workrave-1.8.4-no_gnome.patch,
  +files/org.workrave.Workrave.service.in, +workrave-1.8.4.ebuild:
  New release. Re-added 'dbus' USE flag. Dropped virtual/x11 dependency. Added
  patch to fix compilation with USE=-gnome. Don't install ChangeLog since
  it's an empty document.

  16 Feb 2007; Leonardo Boshell <leonardop@gentoo.org>
  workrave-1.8.3.ebuild:
  Removed invalid use of ROOT (bug #167240).

  20 Nov 2006; Leonardo Boshell <leonardop@gentoo.org>
  -files/workrave-1.8.2-gcc41.patch, -workrave-1.8.1-r1.ebuild,
  -workrave-1.8.2.ebuild, workrave-1.8.3.ebuild:
  Dropped 'dbus' USE flag, since the code doesn't actually use it anywhere.
  Cleaning old ebuilds.

  30 Aug 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  workrave-1.8.3.ebuild:
  ppc stable, bug #141920

  28 Aug 2006; Chris Gianelloni <wolf31o2@gentoo.org> workrave-1.8.3.ebuild:
  Stable on amd64/x86 wrt bug #141920.

*workrave-1.8.3 (18 May 2006)

  18 May 2006; Leonardo Boshell <leonardop@gentoo.org>
  +workrave-1.8.3.ebuild:
  New release.

  27 Apr 2006; Marien Zwart <marienz@gentoo.org>
  files/digest-workrave-1.8.1-r1, Manifest:
  Fixing SHA256 digest, pass four
